--- a/AplikacijaZaZeljeznickuStanicuDRAOS2/AplikacijaZaZeljeznickuStanicuDRAOS2.csproj
+++ b/AplikacijaZaZeljeznickuStanicuDRAOS2/AplikacijaZaZeljeznickuStanicuDRAOS2.csproj
@@ -58,7 +58,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="consts.cs" />
     <Compile Include="Karta.cs" />
+    <Compile Include="Korak4Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Korak4Form.Designer.cs">
+      <DependentUpon>Korak4Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="lang.de.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -89,6 +96,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Korak4Form.resx">
+      <DependentUpon>Korak4Form.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="lang.de.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>lang.de.Designer.cs</LastGenOutput>
