--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 /AplikacijaZaZeljeznickuStanicuDRAOS2.v12.suo
 /AplikacijaZaZeljeznickuStanicuDRAOS2/bin/*
+/AplikacijaZaZeljeznickuStanicuDRAOS2/obj/*
 /AplikacijaZaZeljeznickuStanicuDRAOS2/debug/*
 /.vs/*
 /packages/*
