--- a/AplikacijaZaZeljeznickuStanicuDRAOS2/AplikacijaZaZeljeznickuStanicuDRAOS2.csproj
+++ b/AplikacijaZaZeljeznickuStanicuDRAOS2/AplikacijaZaZeljeznickuStanicuDRAOS2.csproj
@@ -81,6 +81,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>lang.tr.resx</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="TicketForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,14 +156,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
     <EmbeddedResource Include="TTTForm.resx">
       <DependentUpon>TTTForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -182,6 +182,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="How_to_buy_a_ticket_on_the_Munich_Underground_S_Bahn_Metro_Subway.gif" />
+    <None Include="Resources\railway-stationLogo.png" />
+    <None Include="Resources\Help Button 2.png" />
+    <None Include="Resources\Help Button.png" />
+    <None Include="Resources\Button-Help-icon.png" />
     <None Include="Resources\How_to_buy_a_ticket_on_the_Munich_Underground_S_Bahn_Metro_Subway %281%29.gif" />
     <None Include="Resources\novac.gif" />
   </ItemGroup>
